--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,11 +18,20 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+        
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: 3.19.0
+
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle
+
